# practice2024

./: README.md
cmd/live-coding/: comments.bat  conditions.bat  printargs.bat  vars.bat
examples/: array_lib.cpp  binary_files.cpp  braces.cpp  cmd_args.cpp  dec2hex.cpp  double_precision.cpp  exp.cpp  fahrenheit.cpp  files.cpp  function_pointers.cpp  getlines.cpp  hex_bin_file.cpp  long_precision.cpp  nerdy_diamond.cpp  placement_new.cpp  saddle.cpp  sin_table.cpp  sin_taylor_series.cpp  static_arrays.cpp  sum_prod_digits.cpp  user_types.cpp  wtf.cpp
examples/SuperGame/: CMakeLists.txt  GameManager.h  GameState.h  SuperGame.sln  SuperGame.vcxproj  SuperGame.vcxproj.filters  main.cpp
examples/basics/: fahrenheit.cpp  hello.cpp
examples/classes/: IntDynArray.cpp  IntDynArray.h  main.cpp
examples/complex/: complex.cpp  complex.h  complex_poly.h  main.cpp
examples/gtest/: braces_unit_test.cpp
examples/headers/: functions.cpp  functions.h  main.cpp
examples/include_guard/: foo.h  main.cpp
examples/inline/: foo.cpp  main.cpp
examples/matrix/: main.cpp  matrix.cpp  matrix.h
examples/sfml_rotate/: CMakeLists.txt  main.cpp
examples/super_game_sfml/: CMakeLists.txt  GameState.h  main.cpp
examples/templates_static/: Source.cpp  auxiliar.cpp  yet_another.cpp
hometasks/: 2d_arrays.md  arrays.md  basics.md  cmd.md  cstrings.md  digits.md  dyn_arrays.md  lower_triangular.md
sem3/sockets/tcp_basic/: tcp_client.cpp  tcp_client_http.cpp  tcp_server.cpp  tcp_server_http.cpp
sem3/sockets/udp_basic/: udp_client.cpp  udp_server.cpp
sem3/threads/: main.cpp
(+4 files in other folders)
